--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.0",
     "@vue/cli": "^5.0.8",
     "core-js": "^3.8.3",
     "notie": "^4.3.1",
+    "primevue": "^4.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.4.0"
   },
