--- a/package.json
+++ b/package.json
@@ -5,21 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
+    "type-check": "vue-tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "lint:check": "eslint . --ext .vue,.js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
-    "format": "prettier --write \"src/**/*.{vue,js,ts,jsx,tsx,json,css,scss,md}\"",
-    "format:check": "prettier --check \"src/**/*.{vue,js,ts,jsx,tsx,json,css,scss,md}\"",
-    "format:fix": "prettier --write \"src/**/*.{vue,js,ts,jsx,tsx,json,css,scss,md}\"",
-    "code:check": "run-p lint:check format:check type-check",
-    "code:fix": "run-p lint:fix format:fix",
+    "lint": "vue-tsc --noEmit && eslint src --ext .ts,.vue",
+    "format": "prettier --write \"src/**/*.{ts,vue,scss}\"",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -52,6 +45,7 @@
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
+    "vite-plugin-vuetify": "^2.1.1",
     "vitest": "^3.2.4",
     "vue-tsc": "^2.2.10"
   },
